# PyBispectra

./: .flake8  .git-blame-ignore-revs  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE.txt  README.md  changelog.md  environment.yml  pyproject.toml  requirements.txt  requirements_dev.txt  requirements_rtd.txt  setup.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  custom-issue-template.md  feature_request.md
.github/workflows/: release.yml  unit_tests.yml
PyCFC/: init.py
PyCFC/cfc/: process.py
PyCFC/tests/: test_pac.py  test_ppc.py  test_utils.py
PyPAC/: init.py  pac.py  ppc.py  process.py  test_pac.py  utils.py
data/: sim_data_tde_fbands.npy  sim_data_tde_independent_noise.npy
docs/: Makefile  make.bat
docs/source/: api.rst  cfc.rst  conf.py  development.rst  examples.rst  general.rst  index.rst  installation.rst  motivation.rst  oldcompute_ppc.nblink  refs.bib  requirements_link.rst  tde.rst  usage.rst  utils.rst  waveshape.rst
docs/source/_autosummary/: pybispectra.cfc.pac.PAC.rst  pybispectra.cfc.ppc.PPC.rst  pybispectra.rst  pybispectra.tde.tde.rst  pybispectra.test_pac.rst  pybispectra.utils.process.rst  pybispectra.utils.rst  pybispectra.utils.utils.ResultsTDE.rst  pybispectra.utils.utils.compute_fft.rst
docs/source/_static/: requirements.txt  requirements_link.rst  versions.json
docs/source/_static/css/: custom.css
docs/source/_templates/: custom-class-template.rst  custom-module-template.rst
docs/source/auto_examples/: index.rst  plot_compute_pac.ipynb  plot_compute_pac.py.md5  plot_compute_pac.rst  plot_compute_pac_codeobj.pickle  plot_compute_ppc.ipynb  plot_compute_ppc.py  plot_compute_ppc.py.md5  plot_compute_ppc.rst  plot_compute_ppc_codeobj.pickle  plot_compute_tde.ipynb  plot_compute_tde.py  plot_compute_tde.py.md5  plot_compute_tde.rst  plot_pac_control_ppc.ipynb  plot_pac_control_ppc.py  plot_pac_control_ppc.py.md5  plot_pac_control_ppc.rst  plot_plot_results.rst  sg_execution_times.rst
docs/sphinxext/: directive_formatting.py
examples/: README.rst  compute_aac.py  compute_pac_control_harmonics.py  compute_ppc.py  example_data_cfc.npy  plot_compute_aac.py  plot_compute_general.py  plot_compute_harmonic_pac.py  plot_compute_pac.py  plot_compute_ppc.py  plot_compute_tde.py  plot_compute_tde_fbands.py  plot_compute_time_resolved.py  plot_compute_waveshape.py  plot_compute_waveshape_noisy_data.py
examples/data/: sim_data_ppc.npy  sim_data_waveshape_peaks_troughs.npy  sim_data_waveshape_sawtooths.npy
paper/: paper.bib  paper.md
src/pybispectra/: __init__.py  test_pac.py
src/pybispectra/cfc/: __init__.py  aac.py  pac.py  ppc.py  process.py
src/pybispectra/data/: __init__.py  example_data.py  sim_data_aac.npy  sim_data_pac_bivariate.npy  sim_data_pac_univariate.npy  sim_data_tde_correlated_noise.npy  sim_data_waveshape_peaks_troughs.npy
src/pybispectra/general/: __init__.py  general.py
src/pybispectra/tde/: __init__.py  tde.py
src/pybispectra/utils/: __init__.py  _defaults.py  _docs.py  _ged_methods.py  _plot.py  _process.py  _utils.py  ged.py  process.py  results.py  utils.py
src/pybispectra/waveshape/: __init__.py  waveshape.py
tests/: conftest.py  test_cfc.py  test_ged.py  test_general.py  test_plotting.py  test_results.py  test_tde.py  test_util_funcs.py  test_utils.py  test_waveshape.py
tools/: hatch_build.py  requirements_old.txt
